fixed view height bug on mobile

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -15,7 +15,7 @@ body {
 
 
 .left-container {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
 }
@@ -71,11 +71,16 @@ body {
 }
 
 .right-container {
-  height: calc(100vh - 56px);
-  padding-top: 10px;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+}
+
+.messages-container {
+  flex: 0 1 100%;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
   background-color: #36393E;
 
   .channel-title {
